Changed submit button's height to line-height in order to fix alignment issues on ie browser

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ input {
     margin-top: 10px;
     padding: 10px;
     border: none;
-    height: 40px;
+    line-height: 20px;
     width: 115px;
 }
 
